--- a/config
+++ b/config
@@ -98,21 +98,23 @@ multicast = true
 
 #mcp = MCP23008
 
+dht11 = DHT11 gpio:4
+
 #------------------------------------------------------------------------#
 
 [REST]
 # By default, REST API allows to GET/POST on all GPIOs
 # Use gpio-export to limit GPIO available through REST API  
-#gpio-export = 21, 23, 24, 25
+gpio-export = 18, 22, 23, 24, 25
 
 # Uncomment to forbid changing GPIO values 
-#gpio-post-value = false
+gpio-post-value = true
 
 # Uncomment to forbid changing GPIO functions 
-#gpio-post-function = false 
+gpio-post-function = false 
 
 # Uncomment to disable automatic device mapping
-#device-mapping = false
+device-mapping = true
 
 #------------------------------------------------------------------------#
 
@@ -139,4 +141,4 @@ multicast = true
 #/weather/temperature = /devices/bmp/temperature/c
 #/weather/pressure = /devices/bmp/pressure/hpa
 
-#/light = /gpio/23/value
+/light = /gpio/23/value
