--- a/config
+++ b/config
@@ -1,10 +1,12 @@
 [GPIO]
 # Initialize following GPIOs with given function and optional value
 # This is used during WebIOPi start process
-23 = OUT 0 #LIGTH
-24 = OUT 0 #PUMP
-25 = OUT 0 #FAN
-22 = OUT 0 #BRUMI
+23 = OUT 1 #LIGTH
+24 = OUT 1 #PUMP
+25 = OUT 1 #FAN
+18 = OUT 1 #FANHIGH
+22 = OUT 1 #BRUMI
+21 = OUT 1 #BRUMFAN
 
 #------------------------------------------------------------------------#
 
@@ -14,7 +16,9 @@
 23 = IN
 24 = IN
 25 = IN
+18 = IN
 22 = IN
+21 = IN
 
 #------------------------------------------------------------------------#
 
@@ -103,7 +107,7 @@ dht11 = DHT2302 gpio:4
 [REST]
 # By default, REST API allows to GET/POST on all GPIOs
 # Use gpio-export to limit GPIO available through REST API  
-gpio-export = 22, 23, 24, 25
+gpio-export = 22, 23, 24, 25, 18, 21
 
 # Uncomment to forbid changing GPIO values 
 gpio-post-value = false
